[project]
name = "nldate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadang18", email = "nadang@ucsd.edu" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2,<9",
    "ruff>=0.14.6",
]

[project.scripts]
nldate = "nldate:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
